# opengl-practise

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  a.out  glad.c  main.cpp  opengl-notes  triangle.cpp  twoWeirdRectangles.cpp
include/: camera.h  model.h  shader.h
include/glad/: glad.h
src/: .clangd  camera.cpp  glad.c  main.cpp  model.cpp  shader.cpp
src/shaders/: fragmentShader.fs  vertexShader.vs
